// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button text=Send> 1`] = `
<div>
  Send
</div>
`;

exports[`<TextInput text=Send name=testname value=kot readOnly> 1`] = `
<div>
  Send
   
  <div>
    hello world
  </div>
  <br />
  <input
    defaultValue="kot"
    name="testname"
    readOnly={true}
    type="text"
  />
</div>
`;
